Check whether there is enough data before writing to the paint device

The script in bug 419111 created a byte array that was w * h, instead
of w * h * pixelsize, so that caused a crash, but Node::setPixelData
should check whether there is enough data before starting to write.

BUG:419111